# investor-outbound-mcp

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  INTEGRATION.md  PLAN.md  README.md  RECIPES.md  pyproject.toml
docs/: 01-architecture.md  02-database-schema.md  03-rpc-functions.md  04-edge-functions.md  05-auth-flow.md  06-filter-enums.md  07-sample-data.md  08-raw-discovery-notes.md  09-extractor-config.py  13-account-context.md  14-postgrest-query-patterns.md
docs/playbook/: INVESTOR_TARGETING_SOP.md  SEGMENTATION_CRITERIA.md
ops/: investor-outbound-mcp.service
scripts/: validate_brakestogo.py  validate_doosan.py  validate_futurefund.py  validate_grapeviine.py  validate_intralogic.py
src/: client.py  helpers.py  scoring.py  sectors.py  server.py
src/entities/: __init__.py  corporation.py  investor.py  person.py
src/tools/: __init__.py  analytics.py  contact_retrieval.py  deal_matching.py  export_hygiene.py  investor_discovery.py  multi_deal_intel.py  outreach_readiness.py  reverse_lookup.py
tests/: test_analytics.py  test_client.py  test_contact_retrieval.py  test_deal_matching.py  test_entities.py  test_export_hygiene.py  test_helpers.py  test_investor_discovery.py  test_multi_deal_intel.py  test_outreach_readiness.py  test_reverse_lookup.py  test_scoring.py  test_sectors.py  test_server.py
