[project]
name = "investor-outbound-mcp"
version = "0.1.0"
description = "MCP server for Investor Outbound — 234K investors, 1.8M contacts"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
]

[project.scripts]
investor-outbound-mcp = "src.server:main"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
    "respx>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
